; ModuleID = '/home/carl/AnghaBench/linux/drivers/i2c/muxes/extr_i2c-arb-gpio-challenge.c_i2c_arbitrator_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i2c/muxes/extr_i2c-arb-gpio-challenge.c_i2c_arbitrator_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.i2c_mux_core = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @i2c_arbitrator_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i2c_arbitrator_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.i2c_mux_core*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.i2c_mux_core* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.i2c_mux_core* %5, %struct.i2c_mux_core** %3, align 8
  %6 = load %struct.i2c_mux_core*, %struct.i2c_mux_core** %3, align 8
  %7 = call i32 @i2c_mux_del_adapters(%struct.i2c_mux_core* %6)
  %8 = load %struct.i2c_mux_core*, %struct.i2c_mux_core** %3, align 8
  %9 = getelementptr inbounds %struct.i2c_mux_core, %struct.i2c_mux_core* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @i2c_put_adapter(i32 %10)
  ret i32 0
}

declare dso_local %struct.i2c_mux_core* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @i2c_mux_del_adapters(%struct.i2c_mux_core*) #1

declare dso_local i32 @i2c_put_adapter(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
